reajustando y agregando nuevo estilo

--- a/Pueba.html
+++ b/Pueba.html
@@ -33,5 +33,10 @@
             ESO ES LO QUE SOMOS EL ESALBON DE UNION DE LA VIDA, LA SABIDURIA, Y EXPERIENCIAS)...
         </p>
     </section>
+    <div class="boton">   
+         <nav>
+             <button type="submit"><a href="www.ejemplo.com" title="Obten mas info">...Conosca mas sobre sonosotros...</a></button>
+         </nav> 
+    </div> 
 </body>
 </html>
