nuevos avances sobre nosotros y avanzando con testimonios

--- a/Pueba.html
+++ b/Pueba.html
@@ -7,16 +7,15 @@
    
 </head>
 <header>
-    <div>
-        <h1>Mentes Maestras...</h1>
+    <div class="Logo">
+        <img src="img/logotipo_2.png">
     </div>
-    <img src="img/logotipo_mentes_maestras.png">
         <nav>
             <ul>
                 <li><a href="Www.Soyunapueba.com">Menu</a></li>
                 <li><a href="Www.Soyunapueba.com">Portafolio</a></li>
-                <li><a href="Www.Soyunapueba.com">Nosotros</a></li>
-                <li><a href="Www.Soyunapueba.com">Contactos</a></li>
+                <li><a href="Nosotros.html">Nosotros</a></li>
+                <li><a href="Www.Soyunapueba.com">Contactanos</a></li>
                 <li><a href="Www.Soyunapueba.com">Servicios</a></li>
                 <li><a href="Www.Soyunapueba.com">Testimonios</a></li>
             </ul>
@@ -27,7 +26,7 @@
     <section class="Titulo">
         <h1>Somos una organisacion en busca de la regeneracion planetaria.</h1>
         <p>(Sabemos que lo que esta faltando en este mundo, es la union, el amor, el compañerismo.
-            Esa fucion de energias salufables las que le hacen bien a nuestro planeta,
+            Esa fucion de energias saludables son las que le hacen bien a nuestro planeta y a nuestro ser,
             esa fucion es la creadora del un bien superior, esa fucion es la Mente Maestra.
             De todas sabidurias llegan y forman parte de uno y de todos.
             ESO ES LO QUE SOMOS EL ESALBON DE UNION DE LA VIDA, LA SABIDURIA, Y EXPERIENCIAS)...
@@ -38,5 +37,8 @@
              <button type="submit"><a href="www.ejemplo.com" title="Obten mas info">...Conosca mas sobre sonosotros...</a></button>
          </nav> 
     </div> 
+    <footer>
+        <p>copyright 2023</p>
+    </footer>
 </body>
 </html>
