avanzamos con el disenio de testimonios

--- a/Pueba.html
+++ b/Pueba.html
@@ -17,7 +17,7 @@
                 <li><a href="Nosotros.html">Nosotros</a></li>
                 <li><a href="Www.Soyunapueba.com">Contactanos</a></li>
                 <li><a href="Www.Soyunapueba.com">Servicios</a></li>
-                <li><a href="Www.Soyunapueba.com">Testimonios</a></li>
+                <li><a href="Testimonios.html">Testimonios</a></li>
             </ul>
         </nav>
   </header>
