terminamos con los testimonios por ahora, ahora comenzamos con el apartado contactanos

--- a/Testimonios.html
+++ b/Testimonios.html
@@ -69,9 +69,9 @@
         <div class="Testimonio2img2">
             <a href="img/oasis4.jpg" title="Ver imagen completa"><img src="img/oasis4.jpg"></a>
         </div>
-       <!--  <div class="Testimonio2img3">
+        <div class="Testimonio2img3">
             <a href="img/osasis1.jpg" title="Ver imagen completa"><img src="img/osasis1.jpg"></a>
-        </div> -->
+        </div>
 
     </section>
     
