--- a/Pueba.html
+++ b/Pueba.html
@@ -38,7 +38,7 @@
          </nav> 
     </div> 
     <footer>
-        <p>copyright 2023</p>
+        <p>Copyright 2023</p>
     </footer>
 </body>
 </html>
