avanzamos con el apartado de contactanos

--- a/Testimonios.html
+++ b/Testimonios.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="pruebacss.css">
 </head>
 <header id="unico">
-    <h2>Testimonios...</h2>   
+    <h2>Contactanos...</h2>   
 </header>
 <body>
     <div class="Logo">
-        <img src="img/logotipo_2.png">
+        <img src="img/logotipo_3.png">
     </div>
     <section>
         <div class="Testimonios">
