agregamos mas de formas de contactarnos

--- a/contactanos.html
+++ b/contactanos.html
@@ -29,8 +29,31 @@
             </div>
             <button type="submit" name="Email Nombre Y Apellido" value="Entregar">Entregar</button>
         </form>
-        
     </section>
+    <section class="adicional">
+        <div>
+            <img src="img/Diseño sin título3.png">
+        </div>
+        <div>
+            <img src="img/Diseño sin título2.png">
+        </div>
+        <div>
+            <img src="img/Diseño sin título1.png">
+        </div>
+    </section>
+</div>
+<footer class="redes">
+    <p><b>Redes Sociales</b></p>
+</footer>
+<footer class="redes2">
+    <ul>
+        <li><a href="https://www.instagram.com/neyenfrandino/">Instagram</a></li>
+    </ul>
+    <ul>
+        <li><a href="https://www.instagram.com/neyenfrandin/">Facebook</a></li>
+</ul>
+</footer>
+
     
 </body>
 </html>
