terminando los contactos

--- a/contactanos.html
+++ b/contactanos.html
@@ -53,6 +53,17 @@
         <li><a href="https://www.instagram.com/neyenfrandin/">Facebook</a></li>
 </ul>
 </footer>
+<footer class="telefono">
+    <p><b>Telefonos</b></p>
+</footer>
+<footer class="telefono2">
+    <ul>
+        <li>(colombia) +573123510295</li>
+    </ul>
+    <ul>
+        <li>(argentina)+5493534794179</li>
+    </ul>
+</footer>
 
     
 </body>
