terminamos section contactos

--- a/contactanos.html
+++ b/contactanos.html
@@ -64,7 +64,21 @@
         <li>(argentina)+5493534794179</li>
     </ul>
 </footer>
+<footer class="ubicacion">
+    <p><b>Ubicacion</b></p>
+</footer>
+<footer class="ubicacion2">
+    <ul>
+        <li>Base(algun lugar de colombia)</li>
+    </ul>
+    <ul>
+        <li>Recurrentes(algun lugar peru)</li>
+    </ul>
+    <ul>
+        <li>Recurrentes(algun lugar argentina)</li>
+    </ul>
 
+</footer>
     
 </body>
 </html>
