iniciando el aparetado de servicios

--- a/Pueba.html
+++ b/Pueba.html
@@ -13,9 +13,9 @@
         <nav>
             <ul>
                 <li><a href="Www.Soyunapueba.com">Menu</a></li>
-                <li><a href="Www.Soyunapueba.com">Portafolio</a></li>
+                <li><a href="portafolio.html">Portafolio</a></li>
                 <li><a href="Nosotros.html">Nosotros</a></li>
-                <li><a href="Www.Soyunapueba.com">Contactanos</a></li>
+                <li><a href="contactanos.html">Contactanos</a></li>
                 <li><a href="Www.Soyunapueba.com">Servicios</a></li>
                 <li><a href="Testimonios.html">Testimonios</a></li>
             </ul>
