--- a/portafolio.html
+++ b/portafolio.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="pruebacss.css">
 </head>
 <header id="unico">
-    <h2>Contactanos...</h2>   
+    <h2>Portafolio...</h2>   
 </header>
 <body>
     <div class="Logo">
@@ -35,7 +35,7 @@
                 </article>
         </div>
     </section>
-    <br>
+    <hr>
     <section class="portafolio2">
         <div>
             <h2>Algun lugar</h2>
@@ -52,9 +52,9 @@
 
                 <strong>Aqui algunas Imagenes</strong>
                 <article class="img">
-                    <a href="img/madreselva3.jpg"><img src="img/madreselva3.jpg"></a>
-                    <a href="img/madre selva2.jpg"><img src="img/madre selva2.jpg"></a>
-                    <a href="img/madreselva1.jpg"><img src="img/madreselva1.jpg"></a>
+                    <a href="img/huerta1.jpg"><img src="img/huerta1.jpg"></a>
+                    <a href="img/huerta2.jpg"><img src="img/huerta2.jpg"></a>
+                    <a href="img/huerto3.jpg"><img src="img/huerto3.jpg"></a>
                 </article>
         </div>
         
