--- a/servicios.html
+++ b/servicios.html
@@ -11,7 +11,38 @@
     <div class="Logo">
         <img src="img/logotipo_3.png">
     </div>
-    <section 
+
+    <div class="Servicios">
+        <img src="img/servicio.png" alt="">
+    </div>
+    <section class="servicio2">
+        <p> <b>Mentes Maestras:</b>
+            Es un movimiento de regeneración planetaria pensado y diseñado para una expansión masiva
+             a nivel global. Somos un equipo totalmente comprometido con el objetivo de 
+             DESPIERTA Y SUEÑA y que a su ves está alineado con los sueños de cada integrante 
+             de este equipo.
+            Despierta y sueña cuenta con un pensamiento sistémico mas allá de la individualidad. 
+            Si no que el roll es la unión, la colaboración, en ser uno contra el problema.
+             Somos ese eslabón de unión en la cadena dónde juntaremos maestros, aspirante de maestros,
+              aprendices etc, en son de un mismo objetivo que es la regeneracion planetaria 
+              y el bienestar en conjunto, individual.</p>
+    </section>
+    <div class="Servicios3">
+        <img src="img/servicio.png" alt="">
+    </div>
+    <section class="servicio4">
+        <p> <b>Mentes Maestras:</b>
+            Nullam elementum lectus volutpat maximus scelerisque. 
+            Proin ullamcorper eleifend enim vel interdum. 
+            Nulla commodo elit leo, sed venenatis mauris vehicula quis.
+             In a mattis libero. Nulla tincidunt felis sed neque venenatis sollicitudin. 
+             Pellentesque maximus ligula et nunc dictum porta. Donec facilisis eros nec augue vestibulum, 
+             in tristique felis elementum. Curabitur non lacus eleifend, posuere tortor scelerisque,
+              scelerisque metus. Ut volutpat felis a sem cursus, nec faucibus enim sodales.
+              Phasellus et vehicula arcu, ultrices cursus ante. Nunc venenatis malesuada tincidunt.
+               Phasellus iaculis tellus nec cursus volutpat. Proin at leo rutrum, luctus libero vitae, 
+               faucibus mi.
+    </section>
     
 </body>
 </html>
