--- a/Testimonios.html
+++ b/Testimonios.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="pruebacss.css">
 </head>
 <header id="unico">
-    <h2>Contactanos...</h2>   
+    <h2>Testimonios...</h2>   
 </header>
 <body>
     <div class="Logo">
