--- a/Pueba.html
+++ b/Pueba.html
@@ -12,11 +12,10 @@
     </div>
         <nav>
             <ul>
-                <li><a href="Www.Soyunapueba.com">Menu</a></li>
                 <li><a href="portafolio.html">Portafolio</a></li>
                 <li><a href="Nosotros.html">Nosotros</a></li>
                 <li><a href="contactanos.html">Contactanos</a></li>
-                <li><a href="Www.Soyunapueba.com">Servicios</a></li>
+                <li><a href="servicios.html">Servicios</a></li>
                 <li><a href="Testimonios.html">Testimonios</a></li>
             </ul>
         </nav>
@@ -34,7 +33,7 @@
     </section>
     <div class="boton">   
          <nav>
-             <button type="submit"><a href="www.ejemplo.com" title="Obten mas info">...Conosca mas sobre sonosotros...</a></button>
+             <button type="submit"><a href="Nosotros.html" title="Obten mas info">...Conosca mas sobre sonosotros...</a></button>
          </nav> 
     </div> 
     <footer>
