:adhesive_bandage: corregir ortografia

--- a/Pueba.html
+++ b/Pueba.html
@@ -23,7 +23,7 @@
  
 <body>
     <section class="Titulo">
-        <h1>Somos una organisacion en busca de la regeneracion planetaria.</h1>
+        <h1>Somos una organizacion en busca de la regeneracion planetaria.</h1>
         <p>(Sabemos que lo que esta faltando en este mundo, es la union, el amor, el compañerismo.
             Esa fucion de energias saludables son las que le hacen bien a nuestro planeta y a nuestro ser,
             esa fucion es la creadora del un bien superior, esa fucion es la Mente Maestra.
