--- a/contactanos.html
+++ b/contactanos.html
@@ -47,7 +47,7 @@
 </footer>
 <footer class="redes2">
     <ul>
-        <li><a href="https://www.instagram.com/neyenfrandino/">Instagram</a></li>
+        <li><a target="_blank" href="https://www.instagram.com/neyenfrandino/">Instagram</a></li>
     </ul>
     <ul>
         <li><a href="https://www.instagram.com/neyenfrandin/">Facebook</a></li>
