--- a/portafolio.html
+++ b/portafolio.html
@@ -15,7 +15,7 @@
     <section class="portafolio">
         <div>
             <h2>Madre selva</h2>
-            <p>En madre selva tuvimos el proyecto de regeneracion de los suelos misioneron en argetiana.
+            <p>En madre selva tuvimos el proyecto de regeneración de los suelos misioneron en Argentina.
                 Mas de 22 ectarias de suelos sin agrotoxicos, utilizando como herramienta la permacultura,
                 madre selva se conbierte en 22 ectarias que se sustentas asi mismos de los materiasles 
                 que necesita para su cocina 
